--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,6 +1,11 @@
 {
-  "i18n": {
-    "header": "Поддержка i18n",
-    "footer": "Вы можете выбрать другой язык в выпадающем меню."
+  "game": {
+    "menu": {
+      "home": "Главная",
+      "tasks": "Задания",
+      "leaders": "Лидеры",
+      "friends": "Друзья",
+      "games": "Игры"
+    }
   }
 }
