Add Profile component, Add header

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,6 +6,9 @@
       "leaders": "Leaders",
       "friends": "Friends",
       "games": "Games"
+    },
+    "profile": {
+      "title": "Profile"
     }
   }
 }
