--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -6,6 +6,9 @@
       "leaders": "Лидеры",
       "friends": "Друзья",
       "games": "Игры"
+    },
+    "profile": {
+      "title": "Профиль"
     }
   }
 }
