Add Ton connect + hook useSlicedAddress + fix init

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,7 +8,10 @@
       "games": "Games"
     },
     "profile": {
-      "title": "Profile"
+      "title": "Profile",
+      "wallet": "Wallet",
+      "notConnected": "Not connected",
+      "connectButton": "Connect a wallet"
     }
   }
 }
