--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -8,7 +8,10 @@
       "games": "Игры"
     },
     "profile": {
-      "title": "Профиль"
+      "title": "Профиль",
+      "wallet": "Кошелек",
+      "notConnected": "Не подключен",
+      "connectButton": "Подключить кошелек"
     }
   }
 }
