--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "game": {
+    "soon": "Скоро...",
     "menu": {
       "home": "Главная",
       "tasks": "Задания",
@@ -19,6 +20,9 @@
         "title": "Ваша награда",
         "button": "Получить"
       }
+    },
+    "games": {
+      "title": "Мини-Игры"
     }
   }
 }
