--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,5 +1,6 @@
 {
   "game": {
+    "soon": "Soon...",
     "menu": {
       "home": "Home",
       "tasks": "Tasks",
@@ -18,6 +19,9 @@
       "tasksBanner": {
         "title": "Your reward",
         "button": "Receive"
+      },
+      "games": {
+        "title": "Mini-Games"
       }
     }
   }
