--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -23,6 +23,16 @@
     },
     "games": {
       "title": "Мини-Игры"
+    },
+    "leaders": {
+      "statistics": {
+        "title": "Статистика",
+        "users": "Пользователей",
+        "online": "Онлайн",
+        "day": "Ежедневный",
+        "week": "Еженедельный",
+        "month": "Ежемесячный"
+      }
     }
   }
 }
