add Multiplier component update KingTheHill component + Timer Component

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -32,6 +32,10 @@
         "day": "Daily",
         "week": "Weekly",
         "month": "Monthly"
+      },
+      "kingTheHill": {
+        "title": "King of the Hill",
+        "button": "Become a King"
       }
     }
   }
