--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -32,6 +32,10 @@
         "day": "Ежедневный",
         "week": "Еженедельный",
         "month": "Ежемесячный"
+      },
+      "kingTheHill": {
+        "title": "Царь Горы",
+        "button": "Стань Царем"
       }
     }
   }
