add BoostButton component

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,7 @@
 {
   "game": {
     "soon": "Soon...",
+    "boostButton": "Boost your score",
     "menu": {
       "home": "Home",
       "tasks": "Tasks",
