--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "game": {
     "soon": "Скоро...",
+    "boostButton": "Увеличь свой результат",
     "menu": {
       "home": "Главная",
       "tasks": "Задания",
