--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -37,6 +37,10 @@
       "kingTheHill": {
         "title": "Царь Горы",
         "button": "Стань Царем"
+      },
+      "list": {
+        "your": "Ваша позиция",
+        "top": "Топ 100"
       }
     }
   }
