add TabsLeaders component

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -41,6 +41,11 @@
       "list": {
         "your": "Your position",
         "top": "Top 100"
+      },
+      "tabs": {
+        "token": "Tokens",
+        "deamond": "Deamonds",
+        "referral": "Referral"
       }
     }
   }
