--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -41,6 +41,11 @@
       "list": {
         "your": "Ваша позиция",
         "top": "Топ 100"
+      },
+      "tabs": {
+        "token": "Токены",
+        "deamond": "Алмазы",
+        "referral": "Рефералы"
       }
     }
   }
