--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -47,6 +47,15 @@
         "deamond": "Алмазы",
         "referral": "Рефералы"
       }
+    },
+    "tasks": {
+      "tabs": {
+        "limited": "Ограниченные",
+        "daily": "Ежедневные",
+        "inGame": "В игре",
+        "partners": "Партнерские",
+        "quests": "Квесты"
+      }
     }
   }
 }
