--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -28,11 +28,7 @@
     "leaders": {
       "statistics": {
         "title": "Статистика",
-        "users": "Пользователей",
-        "online": "Онлайн",
-        "day": "Ежедневный",
-        "week": "Еженедельный",
-        "month": "Ежемесячный"
+        "users": "Пользователей"
       },
       "kingTheHill": {
         "title": "Царь Горы",
