--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -45,12 +45,17 @@
       }
     },
     "tasks": {
+      "title": "Задания",
+      "get": "Получай вознаграждения",
+      "for": "за выполнение заданий",
+      "noTasksYet": "Пока нет заданий",
       "tabs": {
         "limited": "Ограниченные",
         "daily": "Ежедневные",
         "inGame": "В игре",
         "partners": "Партнерские",
-        "quests": "Квесты"
+        "quests": "Квесты",
+        "hiRisk": "Hi-Risk"
       }
     }
   }
