--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -49,6 +49,10 @@
       "get": "Получай вознаграждения",
       "for": "за выполнение заданий",
       "noTasksYet": "Пока нет заданий",
+      "hiRiskDisclaimer": {
+        "title": "ПРЕДУПРЕЖДЕНИЕ",
+        "text": "HI-Risk задания, относятся к категориям: беттинг(ставки, букмекеры и т.д.) гемблинг(покер, казино, лотереи/розыгрыши и т.д.), инвестиции и кредиты/микрозаймы. Их использование может вредить вашему благосостоянию. Мы не несем ответственности за ваши средства!"
+      },
       "tabs": {
         "limited": "Ограниченные",
         "daily": "Ежедневные",
