--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -49,6 +49,10 @@
       "get": "Get Rewards",
       "for": "for completing tasks",
       "noTasksYet": "No tasks yet",
+      "hiRiskDisclaimer": {
+        "title": "Warning",
+        "text": "HI-Risk tasks, belong to the categories: betting (betting, bookmakers, etc.) gambling (poker, casinos, lotteries/sweepstakes, etc.), investments and loans/microloans. Their use may harm your well-being. We are not responsible for your funds!"
+      },
       "tabs": {
         "limited": "Limited",
         "daily": "Daily",
