--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -58,7 +58,7 @@
         "daily": "Daily",
         "inGame": "In-Game",
         "partners": "Partners",
-        "quests": "Quests",
+        "achievements": "Achievements",
         "hiRisk": "Hi-Risk"
       }
     }
