--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -58,7 +58,7 @@
         "daily": "Ежедневные",
         "inGame": "В игре",
         "partners": "Партнерские",
-        "quests": "Квесты",
+        "achievements": "Достижения",
         "hiRisk": "Hi-Risk"
       }
     }
