add title liaders

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -26,6 +26,7 @@
       "title": "Mini-Games"
     },
     "leaders": {
+      "title": "Leaders",
       "statistics": {
         "title": "Statistics",
         "users": "Users"
