--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -26,6 +26,7 @@
       "title": "Мини-Игры"
     },
     "leaders": {
+      "title": "Лидеры",
       "statistics": {
         "title": "Статистика",
         "users": "Пользователей"
