--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -62,6 +62,11 @@
         "achievements": "Достижения",
         "hiRisk": "Hi-Risk"
       }
+    },
+    "friends": {
+      "title": "Друзья",
+      "get": "Получай вознаграждения",
+      "for": "за приглашение друзей"
     }
   }
 }
