--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -66,7 +66,14 @@
     "friends": {
       "title": "Друзья",
       "get": "Получай вознаграждения",
-      "for": "за приглашение друзей"
+      "for": "за приглашение друзей",
+      "bonuses": {
+        "title": "Бонусы",
+        "friend": "Пригласить друга",
+        "preminumFriend": "Пригласить премиум друга",
+        "task": "За выполнение заданий",
+        "game": "За расходы в разделе игры"
+      }
     }
   }
 }
