--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -67,6 +67,9 @@
       "title": "Друзья",
       "get": "Получай вознаграждения",
       "for": "за приглашение друзей",
+      "statTitle": "Статистика",
+      "listTitle": "Ваши друзья",
+      "listEmpty": "Еще нет друзей",
       "bonuses": {
         "title": "Бонусы",
         "friend": "Пригласить друга",
