Add Invite component Add inviteData interface

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -70,6 +70,8 @@
       "statTitle": "Statistics",
       "listTitle": "Your friends",
       "listEmpty": "No friends yet",
+      "copy": "Copy",
+      "invite": "Invite a friend",
       "bonuses": {
         "title": "Bonuses",
         "friend": "Invite a friend",
