--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -70,6 +70,8 @@
       "statTitle": "Статистика",
       "listTitle": "Ваши друзья",
       "listEmpty": "Еще нет друзей",
+      "copy": "Копировать",
+      "invite": "Пригласить друга",
       "bonuses": {
         "title": "Бонусы",
         "friend": "Пригласить друга",
